# CefMP4

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: requiremnts.md
docs/diagrams/: architecture.mmd  checkpoint_recovery_sequence.mmd  chunk_processing_sequence.mmd  ci_cd_pipeline.mmd  class_interactions.mmd  deployment_overview.mmd  design_decisions.mmd  error_handling_graceful_shutdown.mmd  file_watcher_flow.mmd  metadata_generation_sequence.mmd  observability_setup.mmd  stream_finalization_sequence.mmd  stream_initialization_sequence.mmd  stream_processing_flow.mmd
docs/phases/: 01_project_setup_core_config.md  02_file_watching_mechanism.md  03_stream_state_s3_init.md  04_chunk_processing_s3_upload.md  05_stream_finalization_s3_complete.md  06_metadata_generation_ffprobe_json.md  07_checkpoint_recovery_resume.md  08_error_handling_shutdown.md  09_observability_logging_metrics.md  10_finalizing_docker_ci_docs_testing.md
docs/testing_phases/: 01_foundational_unit_tests.md  02_core_component_tests.md  03_integration_tests.md  04_end_to_end_testing.md  05_ci_cd_automation.md  README.md
src/: __init__.py  config.py  events.py  exceptions.py  logging_config.py  main.py  metadata_generator.py  metrics.py  redis_client.py  s3_client.py  stream_processor.py  watcher.py
src/utils/: ffprobe_utils.py  retry.py
tests/: conftest.py  test_core_integration.py  test_exceptions.py  test_ffprobe_utils.py  test_helpers.py  test_logging_config.py  test_main.py  test_metadata_generator.py  test_metrics.py  test_redis_client.py  test_retry.py  test_s3_client.py  test_stream_processor.py  test_watcher.py
